Fixed image alignment for mobile

--- a/styling.css
+++ b/styling.css
@@ -7,5 +7,6 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%
+    max-width: 300pt;
+    width: 90%
 }
